--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,158 @@
 body {
-  margin: 0;
+  background: #4e4e4e;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #74e6ba;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
+}
+
+.App {
+  padding: 10px;
+}
+
+.exercise {
+  border: 2px solid red;
+  margin: 10px;
+  padding: 10px;
+}
+
+.title {
+  margin: 5px;
+  padding: 5px;
+  width: 100%;
+}
+
+.tag {
+  padding: 10px;
+}
+
+.name-tag {
+  color: brown;
+  border: 2px solid cyan;
+  margin: 5px;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.name-tag .open {
+  color: yellow;
+  font-weight: bold;
+}
+
+.icecream-container {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 5px;
+  padding: 5px;
+  border: 2px solid green;
+}
+
+.icecream-item {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.icecream-image {
+  width: 178px;
+  height: 218px;
+  position: relative;
+  border: 1px solid #2f2f2f;
+}
+
+.cone {
+  position: relative;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  height: 0px;
+  width: 0px;
+  border-right: 45px solid transparent;
+  border-left: 45px solid transparent;
+  border-top: 140px solid tan;
+  z-index: 4;
+}
+
+.globe {
+  background-color: #7ab4c5;
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  z-index: 3;
+}
+
+.description {
+  padding: 2px;
+}
+
+.description-text,
+.price-text {
+  width: 160px;
+  padding: 2px;
+  text-align: left;
+}
+
+.icecreams {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.delete {
+  color: red;
+  cursor: pointer;
+}
+
+#gradient-mix {
+  margin: 10px auto;
+  border: 2px solid black;
+  width: 300px;
+  height: 150px;
+}
+
+.color-container {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 5px;
+  padding: 5px;
+  border: 2px solid rgb(0, 13, 128);
+}
+
+.item-color {
+  border: 1px solid yellow;
+  display: flex;
+  flex-flow: row wrap;
+  width: 240px;
+  height: 40px;
+}
+
+.color-box {
+  margin: 5px;
+  border: 1px solid black;
+  width: 50px;
+  height: 28px;
+}
+
+.color-text {
+  width: 100px;
+  margin: auto;
+  padding: 2px;
+  text-align: left;
+}
+
+.remove-color {
+  color: red;
+  font-weight: bold;
+  margin: auto;
+  background-color: white;
+  cursor: pointer;
 }
